--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -498,6 +498,9 @@ padding-right:0;
 padding-bottom:0;
 }
 
+#ancestry_chart > .person_box, #ancestry_chart > .person_boxF  {margin: 0 0 10px 10px;}
+
+
 html[dir='rtl'] #ancestry_chart ul {
 background-position:right top;
 margin:0 15px 0 0;
@@ -509,6 +512,10 @@ margin:0;
 padding:0 2px 0 0;
 left:auto;
 }
+
+html[dir='rtl'] #ancestry_chart > .person_box  {margin: 0 10px 10px 0;}
+html[dir='rtl'] #ancestry_chart > .person_boxF {margin: 0 10px 10px 0;}
+
 
 .topheader {
 color:#888;
@@ -1140,6 +1147,13 @@ font-weight:bold;
 }
 .details_label {
 font-weight:bold;
+}
+
+.name_head {
+color:#333;
+font-weight:bold; font-size:16px;
+line-height:2;
+padding:0 5px;
 }
 
 /* Standard Markup */
